Changing title and h1 content

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Basic website</title>
+    <title>My Basic Website</title>
   </head>
   <body>
-    <h1>Basic website</h1>
+    <h1>My Basic Website</h1>
   </body>
 </html>
