--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Basic Website</title>
-  </head>
-  <body>
-    <h1>My Basic Website</h1>
-  </body>
+<html lang="en">
+
+<head>
+  <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Regular website</title>
+</head>
+
+<body>
+  <div id="container">
+
+    <header>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="./pages/robots.html">Robots</a></li>
+        <li><a href="./pages/contact_us.html">Contact us</a></li>
+        <li><a href="./pages/about.html">About</a></li>
+      </ul>
+    </header>
+
+    <div id="content">
+
+    </div>
+
+    <footer>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="./pages/robots.html">Robots</a></li>
+        <li><a href="./pages/contact_us.html">Contact us</a></li>
+        <li><a href="./pages/about.html">About</a></li>
+      </ul>
+    </footer>
+
+  </div>
+
+  <script src="./js/script.js"></script>
+</body>
+
 </html>
