Updating images instead of links

--- a/pages/robots.html
+++ b/pages/robots.html
@@ -23,9 +23,10 @@
 
         <div id="content">
             <div id="cards-container">
+
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot1" alt="Robot 1">
+                        <img src="../img/robot1.png" alt="Robot 1">
                     </div>
                     <div class="card-content">
                         <h1> Robot 1 </h1>
@@ -36,7 +37,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot2" alt="Robot 2">
+                        <img src="../img/robot2.png" alt="Robot 2">
                     </div>
                     <div class="card-content">
                         <h1> Robot 2 </h1>
@@ -47,7 +48,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot3" alt="Robot 3">
+                        <img src="../img/robot3.png" alt="Robot 3">
                     </div>
                     <div class="card-content">
                         <h1> Robot 3 </h1>
@@ -58,7 +59,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot4" alt="Robot 4">
+                        <img src="../img/robot4.png" alt="Robot 4">
                     </div>
                     <div class="card-content">
                         <h1> Robot 4 </h1>
@@ -69,7 +70,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot5" alt="Robot 5">
+                        <img src="../img/robot5.png" alt="Robot 5">
                     </div>
                     <div class="card-content">
                         <h1> Robot 5 </h1>
@@ -80,7 +81,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot6" alt="Robot 6">
+                        <img src="../img/robot6.png" alt="Robot 6">
                     </div>
                     <div class="card-content">
                         <h1> Robot 6 </h1>
@@ -91,7 +92,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot7" alt="Robot 7">
+                        <img src="../img/robot7.png" alt="Robot 7">
                     </div>
                     <div class="card-content">
                         <h1> Robot 7 </h1>
@@ -102,7 +103,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot8" alt="Robot 8">
+                        <img src="../img/robot8.png" alt="Robot 8">
                     </div>
                     <div class="card-content">
                         <h1> Robot 8 </h1>
@@ -113,7 +114,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot9" alt="Robot 9">
+                        <img src="../img/robot9.png" alt="Robot 9">
                     </div>
                     <div class="card-content">
                         <h1> Robot 9 </h1>
@@ -124,7 +125,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot10" alt="Robot 10">
+                        <img src="../img/robot10.png" alt="Robot 10">
                     </div>
                     <div class="card-content">
                         <h1> Robot 10 </h1>
@@ -135,7 +136,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot11" alt="Robot 11">
+                        <img src="../img/robot11.png" alt="Robot 11">
                     </div>
                     <div class="card-content">
                         <h1> Robot 11 </h1>
@@ -146,7 +147,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot12" alt="Robot 12">
+                        <img src="../img/robot12.png" alt="Robot 12">
                     </div>
                     <div class="card-content">
                         <h1> Robot 12 </h1>
@@ -157,7 +158,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot13" alt="Robot 13">
+                        <img src="../img/robot13.png" alt="Robot 13">
                     </div>
                     <div class="card-content">
                         <h1> Robot 13 </h1>
@@ -168,7 +169,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot14" alt="Robot 14">
+                        <img src="../img/robot14.png" alt="Robot 14">
                     </div>
                     <div class="card-content">
                         <h1> Robot 14 </h1>
@@ -179,7 +180,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot15" alt="Robot 15">
+                        <img src="../img/robot15.png" alt="Robot 15">
                     </div>
                     <div class="card-content">
                         <h1> Robot 15 </h1>
@@ -190,7 +191,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot16" alt="Robot 16">
+                        <img src="../img/robot16.png" alt="Robot 16">
                     </div>
                     <div class="card-content">
                         <h1> Robot 16 </h1>
@@ -201,7 +202,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot17" alt="Robot 17">
+                        <img src="../img/robot17.png" alt="Robot 17">
                     </div>
                     <div class="card-content">
                         <h1> Robot 17 </h1>
@@ -212,7 +213,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot18" alt="Robot 18">
+                        <img src="../img/robot18.png" alt="Robot 18">
                     </div>
                     <div class="card-content">
                         <h1> Robot 18 </h1>
@@ -223,7 +224,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot19" alt="Robot 19">
+                        <img src="../img/robot19.png" alt="Robot 19">
                     </div>
                     <div class="card-content">
                         <h1> Robot 19 </h1>
@@ -234,7 +235,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot20" alt="Robot 20">
+                        <img src="../img/robot20.png" alt="Robot 20">
                     </div>
                     <div class="card-content">
                         <h1> Robot 20 </h1>
@@ -245,7 +246,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot21" alt="Robot 21">
+                        <img src="../img/robot21.png" alt="Robot 21">
                     </div>
                     <div class="card-content">
                         <h1> Robot 21 </h1>
@@ -256,7 +257,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot22" alt="Robot 22">
+                        <img src="../img/robot22.png" alt="Robot 22">
                     </div>
                     <div class="card-content">
                         <h1> Robot 22 </h1>
@@ -267,7 +268,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot23" alt="Robot 23">
+                        <img src="../img/robot23.png" alt="Robot 23">
                     </div>
                     <div class="card-content">
                         <h1> Robot 23 </h1>
@@ -278,7 +279,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot24" alt="Robot 24">
+                        <img src="../img/robot24.png" alt="Robot 24">
                     </div>
                     <div class="card-content">
                         <h1> Robot 24 </h1>
@@ -289,7 +290,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot25" alt="Robot 25">
+                        <img src="../img/robot25.png" alt="Robot 25">
                     </div>
                     <div class="card-content">
                         <h1> Robot 25 </h1>
@@ -300,7 +301,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot26" alt="Robot 26">
+                        <img src="../img/robot26.png" alt="Robot 26">
                     </div>
                     <div class="card-content">
                         <h1> Robot 26 </h1>
@@ -311,7 +312,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot27" alt="Robot 27">
+                        <img src="../img/robot27.png" alt="Robot 27">
                     </div>
                     <div class="card-content">
                         <h1> Robot 27 </h1>
@@ -322,7 +323,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot28" alt="Robot 28">
+                        <img src="../img/robot28.png" alt="Robot 28">
                     </div>
                     <div class="card-content">
                         <h1> Robot 28 </h1>
@@ -333,7 +334,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://robohash.org/robot29" alt="Robot 29">
+                        <img src="../img/robot29.png" alt="Robot 29">
                     </div>
                     <div class="card-content">
                         <h1> Robot 29 </h1>
@@ -343,10 +344,8 @@
                     </div>
                 </div>
 
-
-
-            </div>
-        </div>
+            </div><!-- cards-container -->
+        </div><!-- content -->
 
         <footer class="header_footer">
             <ul class="menu">
